--- a/Rapport/appendiks/Inc1.tex
+++ b/Rapport/appendiks/Inc1.tex
@@ -31,6 +31,7 @@ The requirements considered in this increment are marked with blue colouring.
 		\item {The robot should be able to recognize the coordinates sent from the Kinect}
 	\end{itemize}
 	\item {The robot should be able to receive data from a computer, through a wireless network}
+	\item {The system tasks should be able to be scheduled and verified}
 \end{itemize}
 
 These requirements are rudimentary, and the very essence of the project lies within the fulfilment of these requirements. In this increment the fundamentals of the robots movement should be implemented, the predefined area should be defined, a starting point for this area should be determined and the Microsoft Kinect should be able to detect and track an object by using trajectory prediction.
@@ -181,4 +182,5 @@ The requirements after finalizing increment one is:
 	\item {The robot should be able to recognize the coordinates sent from the Kinect}
 \end{itemize}
 \item {The robot should be able to receive data from a computer, through a wireless network}
+\item {The system tasks should be able to be scheduled and verified}
 \end{itemize}
