--- a/Rapport/kontekst/DesignSpecification.tex
+++ b/Rapport/kontekst/DesignSpecification.tex
@@ -35,6 +35,7 @@ The requirements for the project have been conducted thorugh out the whole proce
 		\item{The robot should be able to recognize the coordinates sent from the Kinect}
 	\end{itemize}
 	\item {The robot should be able to receive data from a computer, through a wireless network}
+	\item {The system tasks should be able to be scheduled and verified}
 \end{itemize}
 
 \section{Delimitations}
