--- a/Rapport/formalia/FutureWork.tex
+++ b/Rapport/formalia/FutureWork.tex
@@ -1,2 +1,7 @@
 \chapter{Future work}
 \label{chap:FutureWork}
+\textbf{Hardware}\newline
+%Vi ville have andre og mere kraftfulde hjul, hvad vi vil gøre for at få de to shields til at virke sammen, eller evt. bruge andre dele til at få funktionaliteten til at virke?
+\textbf{}\newline
+
+\textbf{}\newline
