--- a/Rapport/formalia/konklusion.tex
+++ b/Rapport/formalia/konklusion.tex
@@ -1,2 +1,34 @@
 \chapter{Conclusion}
 \label{chap:Conclusion}
+Based on the analysis chapter concerning a userstory, system capabilities and the hardware's capabilities and limitations, lead to the projects problem statement: 
+
+\textbf{\textit{How can an embedded system control a trash bin to detect, track and catch a thrown object within a designated area?}}
+
+
+The final system partially solves the problem statement. It is capable of detecting and tracking the object thrown towards the robot, but it is not able to catch it, because of the hardware limitations for the project. SKAL DER VÆRE MERE HER?????
+
+To solve the problem statement, a list of general requirements with related subrequirements were constructed. In the following paragraphs each of the general requirements will be evaluated. 
+
+\textbf{The trash bin should catch the trash if the user throws it towards the trash bin and within a predefined area}\newline
+
+
+\textbf{The robot should know where it is positioned}\newline
+
+
+\textbf{The robot should be able to detect and track the thrown trash}\newline
+
+
+\textbf{The robot should know where the the thrown trash will land}\newline
+
+
+\textbf{The robot should be able to move the trash bin, such that the thrown trash lands inside the bin}\newline
+
+
+\textbf{The robot should be able to receive data from a computer, through a wireless network}\newline
+
+
+\textbf{The system tasks should be able to be scheduled and verified}\newline
+
+
+\textbf{Conclusion}\newline
+
