--- a/Rapport/kontekst/DesignSpecification.tex
+++ b/Rapport/kontekst/DesignSpecification.tex
@@ -6,9 +6,9 @@ This chapter will present the requirements and the way they were conducted for t
 \label{sec:System requirements}
 The requirements for the project have been assembled through out several chapters. The Analysis chapter \ref{chap:Analysis}, is were the most of the requirements are conducted. The general requirements were extracted from the user story in section \ref{sec:User story}. Then in the Hardware section \ref{sec:Hardware}, the hardware would set some limitations for the project which lead to some more detailed requirements in the form of subrequirements.
 
-Through out the work with the robot problems occurred and the requirements therefore changed. The changes done to the requirements though out the project, can be seen in the increments found in the Appendixes (referer til de forskellige appendixes), where the requirements for the report will be the in the Evaluation chapter (ref her) in appendix (ref til sidste increment).
+Through out the work with the robot problems occurred and the requirements therefore changed. The changes done to the requirements though out the project, can be seen in the increments found in the Appendixes \ref{chap:Increment one}, \ref{chap:Increment two} and \ref{chap:Increment three}, where the requirements for the report will be the in the Evaluation section \ref{sec:i3Evaluation}, in appendix \ref{chap:Increment three}.
 
-The requirements for the project have been conducted thorugh out the whole process and changes were made accordingly, to adapt to the hardware's limations and the problems found. The requirements can be seen in the following paragraphs. 
+The requirements for the project have been conducted through out the whole process and changes were made accordingly, to adapt to the hardware's limitations and the problems found. The requirements can be seen in the following list: 
 
 \begin{itemize}
 	\item The trash bin should catch the trash if the user throws it towards the trash bin and within a predefined area
