--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -97,21 +97,21 @@ Once cyclic executives are constructed, the implementation is simple and efficie
 To talk about interrupts we first need to define what we are talking about, these definitions are quotes from the John Regehr's article \citep{safe}. The definition for an interrupt is twofold, as the first part is as follows:
 
 {\addtolength{\leftskip}{10 mm}
-	\enquote{A hardware-supported asynchronous transfer of control to an interrupt vector based on the signaling of some condition external to the processor core}\\*
+	\enquote{A hardware-supported asynchronous transfer of control to an interrupt vector based on the signaling of some condition external to the processor core}
 	
 }
 
 The second part of the definition is:
 
 {\addtolength{\leftskip}{10 mm}
-	\enquote{An interrupt is the execution of an interrupt handler: code that is reachable from an interrupt vector}\\*
+	\enquote{An interrupt is the execution of an interrupt handler: code that is reachable from an interrupt vector}
 	
 }
 
 The definition for the introduced term interrupt vector:
 
 {\addtolength{\leftskip}{10 mm}
-	\enquote{A dedicated or configurable location in memory that specifies the address to which execution should jump when an interrupt occurs}\\*
+	\enquote{A dedicated or configurable location in memory that specifies the address to which execution should jump when an interrupt occurs}
 	
 }
 
