--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -20,10 +20,13 @@
 \phantomsection													% Kunstigt afsnit, som hyperlinks kan 'holde fast i'
 \pdfbookmark[0]{Indholdsfortegnelse}{indhold}					% Tildeler en klikbar bookmark til den endelige PDF
 \tableofcontents*												% Indholdsfortegnelsen (kaldet ToC) 
-
+\addcontentsline{toc}{chapter}{\listfigurename}
+\addcontentsline{toc}{chapter}{\lstlistlistingname}
 %\addtocontents{toc}{\protect\newpage}							% Fremtvinger sideskift i ToC hvis noedvendig (der hvor koden placeres)
-
-
+\newpage
+\listoffigures*
+\newpage
+\lstlistoflistings
 \mainmatter														% Hovedindhold - nummereres fra side 1
 
 %%%% Rapportindhold %%%% 										% Rapportindholdet boer IKKE indeholde broedtekst - KUN includede filer!
