--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -25,6 +25,18 @@
 	publisher = {Thomson Learning}
 }
 
+@manual{uppaal,
+	author ={{Uppsala University} and {Aalborg University}},
+	title ={UPPAAL},
+	address = {\url{http://www.uppaal.org/}},
+}
+
+@manual{boundt,
+	author ={{Tidorum Ltd}},
+	title ={Bound-T},
+	address = {\url{http://www.bound-t.com/}},
+}
+
 @article{maalere,
 	author = {Lars Gullev and Michael Poulsen},
 	title = {The installation of meters leads to permanent changes in consumer behaviour},
