--- a/Rapport/formalia/discussion.tex
+++ b/Rapport/formalia/discussion.tex
@@ -1,4 +1,26 @@
 \chapter{Discussion} 
 \label{chap:Discussion}
-%Hvordan vi har talt clock cycles og den process. 
-%Evt. problemer med interrupts?
+
+\textbf{Scheduling}
+
+%Worst-case execution time analysis
+%Hvordan vi har talt clock cycles og den process. - Tools vi har brugt til WCET? 
+\textbf{Process analysis}
+
+%Har vores process model virket? Hvad har virket/hvad har ikke virket? Hvad kan laves om ? Generel reflektion.
+\textbf{Hardware choices}
+
+%Valg af de forskellige sheilds, ardunio board, sensor. Godt/dårligt, ændringer.
+
+\textbf{Object detection}
+
+%Er der ting vi kunne have gjort anderledes for at få bedre resultater her ?
+\textbf{Delimitations}
+
+%Skulle vi have lavet nogle noget før, om de var nødvendige, om vi skulle have lavet andre,  projektets delimitations står som kommentarer herunder: 
+%The group have made two delimitations for the project. First the group have decided that multiple object thrown should not be considered, so only one object should be thrown at a time. \newline
+%It have also been decided that the robot should not drive backwards. The robot starts outside its predefined area and will only drive forward into that. This means that if the robot is already heading towards a point in its predefined area and the Kinect sends a new point, which is behind the robot, it will not be able to drive to the new point given by the Kinect. 
+
+
+%Kunne vi generelt have gjort det til et mere real time problem????
+%Vi skal huske at referere til det openkinect library vi bruger?????
