--- a/Rapport/kontekst/implementation.tex
+++ b/Rapport/kontekst/implementation.tex
@@ -7,6 +7,7 @@ This chapter will describe the implementation of the systems components. It will
 
 \section{Robot}
 \label{sec:Robot}
+This section will describe 
 
 \section{Scheduling}
 \label{sec:Scheduling implementation}
