--- a/Rapport/kontekst/implementation.tex
+++ b/Rapport/kontekst/implementation.tex
@@ -7,7 +7,7 @@ This chapter will describe the implementation of the systems components. It will
 
 \section{Robot}
 \label{sec:Robot}
-This section will describe 
+This section will describe arduino code for the robot. This will include how the arduino connects to the Kinect and how behaviour and calculations done by the arduino. 
 
 \section{Scheduling}
 \label{sec:Scheduling implementation}
