--- a/Rapport/kontekst/tests.tex
+++ b/Rapport/kontekst/tests.tex
@@ -38,3 +38,25 @@ The last step in the UPPAAL schedulability analysis is to use the verifier. This
 E<> PrA.Ready and PrB.Ready and PrC.Ready and PrA.t==0 and PrB.t==0 and PrC.t==0 and time>0
 E[] not (PrA.ERR or PrB.ERR or PrC.ERR)
 \end{lstlisting}
+
+
+
+
+\begin{center}
+	\begin{tabular}{ | p{10cm} | p{5cm} |}
+		\hline
+		\textbf{Test description} & \textbf{Result} \\ \hline	
+		 & \\ \hline
+		 & \\ \hline
+		 & \\ \hline
+		 & \\ \hline
+		 & \\ \hline
+		 & \\ \hline
+		 & \\ \hline
+		 & \\ \hline
+		 & \\ \hline
+		 & \\ \hline
+		 & \\ \hline
+		 & \\ \hline
+	\end{tabular}
+\end{center}
