--- a/Rapport/formalia/discussion.tex
+++ b/Rapport/formalia/discussion.tex
@@ -10,7 +10,7 @@
 %Har vores process model virket? Hvad har virket/hvad har ikke virket? Hvad kan laves om ? Generel reflektion.
 \textbf{Hardware choices}
 
-%Valg af de forskellige sheilds, ardunio board, sensor. Godt/dårligt, ændringer.
+%Valg af de forskellige shields, ardunio board, sensor. Godt/dårligt, ændringer.
 
 \textbf{Object detection}
 
@@ -22,5 +22,6 @@
 %It have also been decided that the robot should not drive backwards. The robot starts outside its predefined area and will only drive forward into that. This means that if the robot is already heading towards a point in its predefined area and the Kinect sends a new point, which is behind the robot, it will not be able to drive to the new point given by the Kinect. 
 
 
-%Kunne vi generelt have gjort det til et mere real time problem????
+%Kunne vi generelt have gjort det til et mere real time problem eller er det overhovedet et godt projekt område til realtids problemer????
 %Vi skal huske at referere til det openkinect library vi bruger?????
+%Vi ku tage de 10 punkter til safety critical realtids guidelines
